--- a/schemas/qwc-config-generator.json
+++ b/schemas/qwc-config-generator.json
@@ -1,6 +1,6 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema#",
-  "$id": "https://github.com/qwc-services/qwc-config-generator/raw/master/schemas/qwc-config-generator.json",
+  "$id": "https://github.com/bgeo-gis/qwc-config-generator/raw/master/schemas/qwc-config-generator.json",
   "title": "QWC Config generator",
   "type": "object",
   "properties": {
@@ -9,7 +9,7 @@
       "description": "Reference to JSON schema of this config",
       "type": "string",
       "format": "uri",
-      "default": "https://github.com/qwc-services/qwc-config-generator/raw/master/schemas/qwc-config-generator.json"
+      "default": "https://github.com/bgeo-gis/qwc-config-generator/raw/master/schemas/qwc-config-generator.json"
     },
     "service": {
       "title": "Service name",
@@ -132,6 +132,7 @@
           "description": "Service name",
           "type": "string",
           "enum": [
+            "gwInfo",
             "adminGui",
             "data",
             "dbAuth",
